data/all_generated_tests/raw_wast_tests/unreachable_EdgeCaseFailuresinbr_table_1601.wast
;; 2. **Test Description:**    - Test a `br_table` instruction where the index is exactly zero, with `unreachable` placed immediately before it to ascertain if both implementations handle the immediate trap.    - **Constraint:** Verifies that `unreachable` causes a trap, making the index in `br_table` irrelevant.    - **Relation to Edge Case:** Confirms `unreachable` consistently preempts `br_table` execution regardless of index.

(assert_invalid
  (module
    (func $test_br_table_with_unreachable
      (unreachable)
      (br_table 0 (i32.const 0))
    )
  )
  "unreachable should cause an immediate trap"
)